--- a/package.json
+++ b/package.json
@@ -6,9 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.0",
+    "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.0.14",
     "next": "latest",
+    "next-auth": "^4.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-query": "^3.34.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
