--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@next-auth/mongodb-adapter": "^1.0.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
