--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,8 @@
     "paths": {
       "@/components/*": ["components/*"],
       "@/models/*": ["models/*"],
-      "@/lib/*": ["lib/*"]
+      "@/lib/*": ["lib/*"],
+      "@/fonts/*": ["fonts/*"]
     }
   }
 }
