--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.0.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "next": "latest",
