--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@next-auth/mongodb-adapter": "^1.0.0",
+    "@tailwindcss/forms": "^0.4.0",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "draft-js": "^0.11.7",
@@ -21,11 +22,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
-    "react-query": "^3.34.0"
+    "react-indiana-drag-scroll": "^2.1.0",
+    "react-paginate": "^8.1.0",
+    "react-query": "^3.34.0",
+    "swiper": "^7.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0"
   }
 }
