added mobile responsive view for homepage

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@/components/*": ["components/*"],
       "@/models/*": ["models/*"],
       "@/lib/*": ["lib/*"],
-      "@/fonts/*": ["fonts/*"]
+      "@/fonts/*": ["fonts/*"],
+      "@/hooks/*": ["hooks/*"]
     }
   }
 }
