--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^1.0.5",
     "@next-auth/mongodb-adapter": "^1.0.0",
     "@tailwindcss/forms": "^0.4.0",
+    "aos": "^2.3.4",
     "axios": "^0.24.0",
     "bcrypt": "^5.0.1",
     "draft-js": "^0.11.7",
